--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Iron Park Portfolio</title>
   <meta name="description" content="This is a portfolio of CoJae.">
   <meta name="anthor" content="coJae">
-  <link rel="icon" type="image/png" href="imgs/favicon.png">
+  <link rel="icon" type="image/png" href="imgs/favicon2.png">
   <script src="https://kit.fontawesome.com/880feca2f0.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -286,13 +286,13 @@
         This is what I've been working on so far.</h3>
       <div class="work__categories">
         <button class="category__btn selected" data-filter="*">
-          All <span class="category__count">15</span>
+          All <span class="category__count">24</span>
         </button>
         <button class="category__btn" data-filter="webpages">
           Web <span class="category__count">12</span>
         </button>
         <button class="category__btn" data-filter="moblie">
-          Design <span class="category__count">3</span>
+          Design <span class="category__count">12</span>
         </button>
       </div>
       <div class="box">
@@ -404,27 +404,101 @@
           target="blank" data-type="moblie">
           <img class="project__img" src="imgs/projects/poster.jpg" alt="Simpleshop">
           <div class="project__description">
-            <h3>Poster</h3>
-            <span>Click to see more</span>
+            <h3>삼월의그들</h3>
+            <span>Using Illustrator, Photoshop</span>
           </div>
         </a>
 
         <a href="#" class="project"
           target="blank" data-type="moblie">
-          <img class="project__img" src="imgs/projects/leflet.jpg" alt="Simpleshop">
+          <img class="project__img" src="imgs/projects/poster2.jpg" alt="Simpleshop">
           <div class="project__description">
-            <h3>Leflet</h3>
-            <span>Click to see more</span>
+            <h3>서울다방:연극</h3>
+            <span>Using Illustrator, Photoshop</span>
           </div>
         </a>
         <a href="#" class="project"
         target="blank" data-type="moblie">
-        <img class="project__img" src="imgs/projects/logo.jpg" alt="Simpleshop">
+        <img class="project__img" src="imgs/projects/poster3.jpg" alt="Simpleshop">
         <div class="project__description">
-          <h3>Logo</h3>
-          <span>Click to see more</span>
+          <h3>필란트로피 소사이어티 디지털포럼</h3>
+          <span>Using Illustrator, Photoshop</span>
         </div>
       </a>
+      
+      <a href="#" class="project"
+      target="blank" data-type="moblie">
+      <img class="project__img" src="imgs/projects/poster4.jpg" alt="Simpleshop">
+      <div class="project__description">
+        <h3>양진원의 인생극장</h3>
+        <span>Using Illustrator, Photoshop</span>
+      </div>
+    </a>
+
+    <a href="#" class="project"
+    target="blank" data-type="moblie">
+    <img class="project__img" src="imgs/projects/poster5.jpg" alt="Simpleshop">
+    <div class="project__description">
+      <h3>쇼미더머니9 영보스</h3>
+      <span>Using Illustrator, Photoshop</span>
+    </div>
+  </a>
+  <a href="#" class="project"
+  target="blank" data-type="moblie">
+  <img class="project__img" src="imgs/projects/poster6.jpg" alt="Simpleshop">
+  <div class="project__description">
+    <h3>한-메콩 교류 포럼</h3>
+    <span>Using Illustrator, Photoshop</span>
+  </div>
+</a>
+<a href="#" class="project"
+target="blank" data-type="moblie">
+<img class="project__img" src="imgs/projects/poster7.jpg" alt="Simpleshop">
+<div class="project__description">
+  <h3>트롯젠틀맨</h3>
+  <span>Using Illustrator, Photoshop</span>
+</div>
+</a>
+<a href="#" class="project"
+target="blank" data-type="moblie">
+<img class="project__img" src="imgs/projects/poster8.jpg" alt="Simpleshop">
+<div class="project__description">
+  <h3>트롯의 세계</h3>
+  <span>Using Illustrator, Photoshop</span>
+</div>
+</a>
+<a href="#" class="project"
+target="blank" data-type="moblie">
+<img class="project__img" src="imgs/projects/poster9.jpg" alt="Simpleshop">
+<div class="project__description">
+  <h3>뷰티최고전문과정 포스터</h3>
+  <span>Using Illustrator, Photoshop</span>
+</div>
+</a>
+<a href="#" class="project"
+target="blank" data-type="moblie">
+<img class="project__img" src="imgs/projects/poster10.jpg" alt="Simpleshop">
+<div class="project__description">
+  <h3>유리:연극</h3>
+  <span>Using Illustrator, Photoshop</span>
+</div>
+</a>
+<a href="#" class="project"
+target="blank" data-type="moblie">
+<img class="project__img" src="imgs/projects/poster11.jpg" alt="Simpleshop">
+<div class="project__description">
+  <h3>초향</h3>
+  <span>Using Illustrator, Photoshop</span>
+</div>
+</a>
+<a href="#" class="project"
+target="blank" data-type="moblie">
+<img class="project__img" src="imgs/projects/poster12.jpg" alt="Simpleshop">
+<div class="project__description">
+  <h3>리얼시니어 과정 포스터</h3>
+  <span>Using Illustrator, Photoshop</span>
+</div>
+</a>
       </div>
   </section>
 
