--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- About -->
   <section id="aboutskills" class="section section__container">
     <h1>About & Skills</h1>
-    <p>We have been UX-UI design for about a year and are moving forward toward all <br>related jobs that require UX-UI
+    <p>I have been UX-UI design for about a year and am moving forward toward all <br>related jobs that require UX-UI
       design</p>
     <div class="about__majors">
       <div class="major">
