--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
         </div>
       </div>
       <h1 class="home__title">Hello, <br>I'm Park chul hyun </h1>
-      <h2 class="home__description">A person running toward a UX-UI designer in Gimpo, Korea.</h2>
+      <h3 class="home__description">
+        저는 돌파하는 법을 찾는 사람입니다. <br>
+        장애물을 만나면 좌절하지 않고 돌파구를 찾아
+        실행에 옮겨 극복했습니다. <br>
+        그러한 시간들 속에서 쌓여온 경험들이
+        이제는 제 능력이 되었고 <br>
+        그 능력으로 제 꿈을 향해 달려나가고 있습니다.</h3>
       <button class="home__contact">Contact Me</button>
     </div>
   </section>
@@ -59,8 +65,8 @@
   <!-- About -->
   <section id="aboutskills" class="section section__container">
     <h1>About & Skills</h1>
-    <p>I have been UX-UI design for about a year and am moving forward toward all <br>related jobs that require UX-UI
-      design</p>
+    <p>저는 디자인을 한 지 1년 정도 되었고 Photoshop, Illustrator, XD와 더불어 <br> HTML, CSS, JavaScript, jQuery등 UX-UI디자인에 필요한 역량들을 배우며 앞으로 나아가고 있습니다.
+    </p>
     <div class="about__majors">
       <div class="major">
         <div class="major__icon">
@@ -230,7 +236,7 @@
               </div>
             </div>
             <!-- 기간 -->
-            <div class="school-box">
+            <!-- <div class="school-box">
               <div class="school">
                 <div class="school__description">
                   <p class="school__name">photoshop</p>
@@ -273,7 +279,7 @@
                 </div>
                 <img src="imgs/school/javascript.png" alt="JavsScript" class="school__logo">
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
     </div>
@@ -286,7 +292,8 @@
     <div class="section__container">
       <h1>My work</h1>
       <h3>
-        This is what I've been working on so far.</h3>
+        제가 지금까지 작업한 웹사이트들과 디자인 작업물입니다.
+      </h3>
       <div class="work__categories">
         <button class="category__btn selected" data-filter="*">
           All <span class="category__count">24</span>
@@ -304,7 +311,7 @@
           target="blank" data-type="webpages">
           <img class="project__img" src="./imgs/projects/interpark.jpg" alt="interpark">
           <div class="project__description">
-            <h3>interpark Ticket Renewal</h3>
+            <h3>Interpark Ticket Renewal</h3>
             <span>Using HTML, CSS, jQuery, Photoshop, XD</span>
           </div>
         </a>
@@ -330,7 +337,7 @@
             target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/shilla.jpg" alt="shilla">
             <div class="project__description">
-              <h3>shilla hotel Renewal</h3>
+              <h3>Shilla hotel Renewal</h3>
               <span>Using HTML, CSS, jQuery, Photoshop, XD</span>
             </div>
           </a>
@@ -347,7 +354,7 @@
             target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/samsung.jpg" alt="samsung">
             <div class="project__description">
-              <h3>samsung</h3>
+              <h3>Samsung</h3>
               <span>Using HTML, CSS, Javascript, Photoshop</span>
             </div>
           </a>
@@ -381,7 +388,7 @@
             target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/marvel.jpg" alt="marvel">
             <div class="project__description">
-              <h3>marvel</h3>
+              <h3>Marvel</h3>
               <span>Using HTML, CSS, jQuery, Photoshop</span>
             </div>
           </a>
@@ -416,7 +423,7 @@
           target="blank" data-type="moblie">
           <img class="project__img" src="imgs/projects/poster2.jpg" alt="Simpleshop">
           <div class="project__description">
-            <h3>서울다방:연극</h3>
+            <h3>서울다방</h3>
             <span>Using Illustrator, Photoshop</span>
           </div>
         </a>
@@ -433,7 +440,7 @@
       target="blank" data-type="moblie">
       <img class="project__img" src="imgs/projects/poster4.jpg" alt="Simpleshop">
       <div class="project__description">
-        <h3>양진원의 인생극장</h3>
+        <h3>양지원의 인생극장</h3>
         <span>Using Illustrator, Photoshop</span>
       </div>
     </a>
@@ -442,7 +449,7 @@
     target="blank" data-type="moblie">
     <img class="project__img" src="imgs/projects/poster5.jpg" alt="Simpleshop">
     <div class="project__description">
-      <h3>쇼미더머니9 영보스</h3>
+      <h3>쇼미더머니9-영보스</h3>
       <span>Using Illustrator, Photoshop</span>
     </div>
   </a>
@@ -482,7 +489,7 @@ target="blank" data-type="moblie">
 target="blank" data-type="moblie">
 <img class="project__img" src="imgs/projects/poster10.jpg" alt="Simpleshop">
 <div class="project__description">
-  <h3>유리:연극</h3>
+  <h3>유리</h3>
   <span>Using Illustrator, Photoshop</span>
 </div>
 </a>
@@ -507,7 +514,8 @@ target="blank" data-type="moblie">
 
   <!-- Contact -->
   <section id="contact" class="section">
-    <h1 class="contact__title">Let's talk</h1>
+    <h1 class="contact__title">끝까지 봐주셔서 감사합니다. <br>
+      오늘보다 내일이 더 기대되는 박철현이었습니다</h1>
     <h2 class="contact__email">010-5356-6199</h2>
     <h2 class="contact__email">ironpark1105@naver.com</h2>
     <div class="contact__links">
@@ -517,7 +525,7 @@ target="blank" data-type="moblie">
       <a href="https://www.instagram.com/iron_park_design/" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://www.instagram.com/iron_park_design/" target="_blank">
+      <a href="https://www.facebook.com/profile.php?id=100003482239159" target="_blank">
         <i class="fab fa-facebook"></i>
       </a>
     </div>
