--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="/imgs/main.jpg">
+  <meta property="og:image" content="../imgs/main.jpg">
   <meta property="og:title" content="박철현 포트폴리오">
   <meta property="og:description" content="박철현 UX-UI 디자인 포트폴리오">
   <title>Iron Park Portfolio</title>
