--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="./imgs/main.png">
+  <meta property="og:image" content="imgs/main.png">
   <meta property="og:title" content="박철현 포트폴리오">
   <meta property="og:description" content="박철현 UX-UI 디자인 포트폴리오">
   <title>Iron Park Portfolio</title>
@@ -15,9 +15,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <script src="main.js" defer></script>
 </head>
-
 <body>
   <!-- Navbar -->
   <nav id="navbar">
@@ -533,7 +533,6 @@ target="blank" data-type="moblie">
       2021 UX-UI Designer Chul Hyun - All rights reserved
     </p>
   </section>
-
   <!-- Arrow up -->
   <button class="arrow-up">
     <i class="fas fa-arrow-up"></i>
