--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar__logo">
-      <a href="index.html">Iron Park</a>
+      <a href="./index.html">Iron Park</a>
     </div>
     <ul class="navbar__menu">
       <li class="navbar__menu__item active" data-link="#home">Home</li>
