--- a/index.html
+++ b/index.html
@@ -11,27 +11,38 @@
   <meta name="description" content="This is a portfolio of CoJae.">
   <meta name="anthor" content="coJae">
   <link rel="icon" type="image/png" href="imgs/favicon2.png">
-  <script src="https://kit.fontawesome.com/880feca2f0.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
-    rel="stylesheet">
-  <script src="main.js" defer></script>
+  <!-- fontawesome 아이콘 -->
+  <script src="./jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.3/jquery.scrollTo.min.js"></script>
+  <!-- 웹폰트 -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <!-- fontawesome 아이콘 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- 사용자 css -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css" integrity="sha512-6c4nX2tn5KbzeBJo9Ywpa0Gkt+mzCzJBrE1RB6fmpcsoN+b/w/euwIMuQKNyUoU/nToKN3a8SgNOtPrbW12fug==" crossorigin="anonymous" />
+
+    <script src="https://kit.fontawesome.com/880feca2f0.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet">
+    <script src="main.js" defer></script>
 </head>
 
 <body>
   <!-- Navbar -->
   <nav id="navbar">
-    <div class="navbar__logo">
-      <a href="./index.html">Iron Park</a>
+    <div>
+      <a id="navbar__logo" href="#">Iron Park</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item active" data-link="#home">Home</li>
-      <li class="navbar__menu__item" data-link="#aboutskills">About & Skills</li>
-      <li class="navbar__menu__item" data-link="#work">My work</li>
-      <li class="navbar__menu__item" data-link="#contact">Contact</li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#aboutskills">About & Skills</a></li>
+      <li><a href="#work">My work</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
     <!-- Toogle button -->
     <button class="navbar__toggle-btn">
@@ -158,7 +169,7 @@
               <div class="skill">
                 <div class="skill__description">
                   <span>photoshop</span>
-                  <span>90%</span>
+                  <span>상</span>
                 </div>
                 <div class="skill__bar">
                   <div class="skill__value" style="width: 90%;"></div>
@@ -167,16 +178,16 @@
               <div class="skill">
                 <div class="skill__description">
                   <span>Illustrator</span>
-                  <span>80%</span>
+                  <span>상</span>
                 </div>
                 <div class="skill__bar">
-                  <div class="skill__value" style="width: 80%;"></div>
+                  <div class="skill__value" style="width: 90%;"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill__description">
                   <span>XD</span>
-                  <span>90%</span>
+                  <span>상</span>
                 </div>
                 <div class="skill__bar">
                   <div class="skill__value" style="width: 90%;"></div>
@@ -185,41 +196,40 @@
               <div class="skill">
                 <div class="skill__description">
                   <span>HTML</span>
-                  <span>90%</span>
+                  <span>중상</span>
                 </div>
                 <div class="skill__bar">
-                  <div class="skill__value" style="width: 90%;"></div>
+                  <div class="skill__value" style="width: 65%;"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill__description">
                   <span>CSS</span>
-                  <span>80%</span>
+                  <span>중상</span>
                 </div>
                 <div class="skill__bar">
-                  <div class="skill__value" style="width: 80%;"></div>
+                  <div class="skill__value" style="width: 65%;"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill__description">
                   <span>JavaScript</span>
-                  <span>30%</span>
+                  <span>중하</span>
                 </div>
                 <div class="skill__bar">
-                  <div class="skill__value" style="width: 30%;"></div>
+                  <div class="skill__value" style="width: 35%;"></div>
                 </div>
               </div>
               <div class="skill">
                 <div class="skill__description">
                   <span>jQuery</span>
-                  <span>50%</span>
+                  <span>중하</span>
                 </div>
                 <div class="skill__bar">
-                  <div class="skill__value" style="width: 50%;"></div>
+                  <div class="skill__value" style="width: 35%;"></div>
                 </div>
               </div>
             </div>
-            <!-- Tools -->
             <div class="skillset__right">
               <div class="tools">
                 <h3 class="skillset__title">Tools</h3>
@@ -253,13 +263,13 @@
       </h3>
       <div class="work__categories">
         <button class="category__btn selected" data-filter="*">
-          All <span class="category__count">24</span>
+          All <span class="category__count">12</span>
         </button>
         <button class="category__btn" data-filter="webpages">
-          Web <span class="category__count">12</span>
+          Web <span class="category__count">6</span>
         </button>
         <button class="category__btn" data-filter="moblie">
-          Design <span class="category__count">12</span>
+          Design <span class="category__count">6</span>
         </button>
       </div>
       <div class="box">
@@ -287,21 +297,21 @@
             </div>
           </a>
 
-          <a href=" https://ironpark1105.github.io/SHILLA/" class="project" target="blank" data-type="webpages">
+          <!-- <a href=" https://ironpark1105.github.io/SHILLA/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/shilla.jpg" alt="shilla">
             <div class="project__description">
               <h3>Shilla hotel Renewal</h3>
               <span>Using HTML, CSS, jQuery, Photoshop, XD</span>
             </div>
-          </a>
-
+          </a> -->
+          <!-- 
           <a href="https://ironpark1105.github.io/cloud/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/cloud.jpg" alt="cloud">
             <div class="project__description">
               <h3>구름투어</h3>
               <span>Using HTML, CSS, jQuery, Photoshop, XD</span>
             </div>
-          </a>
+          </a> -->
           <a href="https://ironpark1105.github.io/smasung/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/samsung.jpg" alt="samsung">
             <div class="project__description">
@@ -309,21 +319,21 @@
               <span>Using HTML, CSS, Javascript, Photoshop</span>
             </div>
           </a>
-
+          <!-- 
           <a href="https://ironpark1105.github.io/yugin/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/yugin.jpg" alt="yugin">
             <div class="project__description">
               <h3>유진자산</h3>
               <span>Using HTML, CSS, Photoshop</span>
             </div>
-          </a>
-          <a href="https://ironpark1105.github.io/cafe/" class="project" target="blank" data-type="webpages">
+          </a> -->
+          <!-- <a href="https://ironpark1105.github.io/cafe/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/daum.jpg" alt="daum">
             <div class="project__description">
               <h3>다음 카페</h3>
               <span>Using HTML, CSS, Photoshop</span>
             </div>
-          </a>
+          </a> -->
           <a href="https://ironpark1105.github.io/whanin/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/hwanin.jpg" alt="hwanin">
             <div class="project__description">
@@ -332,20 +342,20 @@
             </div>
           </a>
 
-          <a href="https://ironpark1105.github.io/mavel/" class="project" target="blank" data-type="webpages">
+          <!-- <a href="https://ironpark1105.github.io/mavel/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/marvel.jpg" alt="marvel">
             <div class="project__description">
               <h3>Marvel</h3>
               <span>Using HTML, CSS, jQuery, Photoshop</span>
             </div>
-          </a>
-          <a href="https://ironpark1105.github.io/JB/" class="project" target="blank" data-type="webpages">
+          </a> -->
+          <!-- <a href="https://ironpark1105.github.io/JB/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/JB.jpg" alt="daum">
             <div class="project__description">
               <h3>JB자산운용</h3>
               <span>Using HTML, CSS, Photoshop</span>
             </div>
-          </a>
+          </a> -->
           <a href="https://ironpark1105.github.io/wedding-Mobile/" class="project" target="blank" data-type="webpages">
             <img class="project__img" src="imgs/projects/wedding.jpg" alt="hwanin">
             <div class="project__description">
@@ -377,15 +387,6 @@
               <span>Using Illustrator, Photoshop</span>
             </div>
           </a>
-
-          <a href="./sub/poster4.html" class="project" target="blank" data-type="moblie">
-            <img class="project__img" src="imgs/projects/poster4.jpg" alt="Simpleshop">
-            <div class="project__description">
-              <h3>양지원의 인생극장</h3>
-              <span>Using Illustrator, Photoshop</span>
-            </div>
-          </a>
-
           <a href="./sub/poster5.html" class="project" target="blank" data-type="moblie">
             <img class="project__img" src="imgs/projects/poster5.jpg" alt="Simpleshop">
             <div class="project__description">
@@ -400,41 +401,7 @@
               <span>Using Illustrator, Photoshop</span>
             </div>
           </a>
-          <a href="./sub/poster7.html" class="project" target="blank" data-type="moblie">
-            <img class="project__img" src="imgs/projects/poster7.jpg" alt="Simpleshop">
-            <div class="project__description">
-              <h3>트롯젠틀맨</h3>
-              <span>Using Illustrator, Photoshop</span>
-            </div>
-          </a>
-          <a href="./sub/poster8.html" class="project" target="blank" data-type="moblie">
-            <img class="project__img" src="imgs/projects/poster8.jpg" alt="Simpleshop">
-            <div class="project__description">
-              <h3>트롯의 세계</h3>
-              <span>Using Illustrator, Photoshop</span>
-            </div>
-          </a>
-          <a href="./sub/poster9.html" class="project" target="blank" data-type="moblie">
-            <img class="project__img" src="imgs/projects/poster9.jpg" alt="Simpleshop">
-            <div class="project__description">
-              <h3>뷰티최고전문과정 포스터</h3>
-              <span>Using Illustrator, Photoshop</span>
-            </div>
-          </a>
-          <a href="./sub/poster10.html" class="project" target="blank" data-type="moblie">
-            <img class="project__img" src="imgs/projects/poster10.jpg" alt="Simpleshop">
-            <div class="project__description">
-              <h3>유리</h3>
-              <span>Using Illustrator, Photoshop</span>
-            </div>
-          </a>
-          <a href="./sub/poster11.html" class="project" target="blank" data-type="moblie">
-            <img class="project__img" src="imgs/projects/poster11.jpg" alt="Simpleshop">
-            <div class="project__description">
-              <h3>초향</h3>
-              <span>Using Illustrator, Photoshop</span>
-            </div>
-          </a>
+
           <a href="./sub/poster12.html" class="project" target="blank" data-type="moblie">
             <img class="project__img" src="imgs/projects/poster12.jpg" alt="Simpleshop">
             <div class="project__description">
@@ -470,6 +437,26 @@
   <button class="arrow-up">
     <i class="fas fa-arrow-up"></i>
   </button>
+
+  
+  <script>
+    $(function () {
+      $('#navbar .navbar__menu li a').click(function (e) {
+        e.preventDefault();
+        //이동할 섹션이름
+        var goPage = $(this).attr('href');
+        //gopage의 y 좌표
+        var pageY = $(goPage).offset().top
+        $(window).scrollTo({
+          left: 0,
+          top: pageY
+        }, 500)
+      })
+    })
+  </script>
 </body>
+
+
+
 
 </html>
