--- a/sub/poster12.html
+++ b/sub/poster12.html
@@ -13,51 +13,40 @@
 </head>
 <body>
       <!-- Navbar -->
-  <nav id="navbar">
-    <div class="navbar__logo">
-      <a href="../index.html">Iron Park</a>
-    </div>
-    <ul class="navbar__menu">
-      <li class="navbar__menu__item active" data-link="#home">Home</li>
-      <li class="navbar__menu__item" data-link="#aboutskills">About & Skills</li>
-      <li class="navbar__menu__item" data-link="#work">My work</li>
-      <li class="navbar__menu__item" data-link="#contact">Contact</li>
-    </ul>
-
-    <!-- Toogle button -->
-    <button class="navbar__toggle-btn">
-      <i class="fas fa-bars"></i>
-    </button>
-  </nav>
+      <nav id="navbar">
+        <div>
+          <a id="navbar__logo" href="../index.html#home">Iron Park</a>
+        </div>
+        <ul class="navbar__menu">
+          <li><a href="../index.html#home">Home</a></li>
+          <li><a href="../index.html#aboutskills">About & Skills</a></li>
+          <li><a href="../index.html#work">My work</a></li>
+          <li><a href="../index.html#contact">Contact</a></li>
+        </ul>
+        <!-- Toogle button -->
+        <button class="navbar__toggle-btn">
+          <i class="fas fa-bars"></i>
+        </button>
+      </nav>
 
   <!-- Home -->
-  <section id="home">
-    <div class="home__container">
-
-      <div class="home__avatar">
-        <div class="home__avatar_text">
-          <h2>박철현<span> Park Chul Hyun</span></h2>
-          <p><strong> Age</strong> : 27</p>
-          <p><strong> Job</strong> : UX-UI designer</p>
-          <p><strong> E-mail</strong> : ironpark1105@naver.com</p>
-          <p><strong> TEL</strong> : 010-5356-6199</p>
-        </div>
-      </div>
-      <h1 class="home__title">Hello, <br>I'm Park chul hyun </h1>
-      <h2 class="home__description">A person running toward a UX-UI designer in Gimpo, Korea.</h2>
-      <button class="home__contact">Contact Me</button>
+  <section id="home2">
+    <div class="sub-img2-box">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (1).jpg" alt="포스터">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (2).jpg" alt="포스터">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (3).jpg" alt="포스터">
     </div>
+    
+    <div class="sub-img2-box">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (4).jpg" alt="포스터">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (5).jpg" alt="포스터">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (6).jpg" alt="포스터">
+    </div>
+    <div class="sub-img2-box">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (7).jpg" alt="포스터">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (8).jpg" alt="포스터">
+    <img class="sub-img2 container" src="../imgs/projects/poster-box (9).jpg" alt="포스터">
+  </div>
   </section>
-  <div class="sub-img2-box">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (1).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (2).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (3).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (4).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (5)).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (6).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (7).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (8).jpg" alt="포스터">
-  <img class="sub-img2 container" src="../imgs/projects/poster-box (9).jpg" alt="포스터">
-</div>
 </body>
 </html>
